overflow issue

--- a/public/stylesheets/partials/_base.scss
+++ b/public/stylesheets/partials/_base.scss
@@ -48,7 +48,7 @@ main {
 h2, h3, h4, h5, h6 {
     font-family: $sans;
     letter-spacing: .25px;
-    line-height: 1.15em;
+    line-height: 1.25em;
 }
 
 h1 {
@@ -82,7 +82,8 @@ h6 {
 p {
     font-family: $sans;
     font-size: 1em;
-    line-height: 1.4;
+    line-height: 1.2em;
+    margin-bottom: 1.5em;
 }
 
 ul, li {
